Implement cmdline.txt parsing properly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-uefi = { version = "0", features = ["alloc", "global_allocator", "panic_handler"] }
+log = "0.4.27"
+uefi = { version = "0", features = ["alloc", "global_allocator", "panic_handler", "logger"] }
 
 [profile.dev]
 panic = "abort"
